HelloUltraviolet/Fixtures/RejectedSource/Procedures/ResultGenericConstraint/Source/Main.uv
//! Rejected postcondition specimen for class-requiring operations on generic results.

public procedure genericResultConstraint<TValue>(value: TValue) -> TValue
|: |= @result == value
{
    return value
}
